Revert support for Java 17